syntax = "proto3";

package status;

service StatusService {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Create(CreateRequest) returns (Response) {}
  rpc Update(UpdateRequest) returns (Response) {}
  rpc Delete(GetRequest) returns (Response) {}
}

message GetRequest {
  uint32 id = 1;
}

message GetResponse {
  Status status = 1;
}

message ListRequest {
  uint32 lastid = 1;
  uint32 offset = 2;
  uint32 limit = 3;
  uint32 group = 4;
  uint32 uid = 5;
}

message ListResponse {
  uint32 count = 1;
  repeated Status list = 2;
}

message Response {}

message CreateRequest {
  string title = 2;
  string content = 3;
  uint32 user_id = 4;
}

message UpdateRequest {
  uint32 id = 1;
  string title = 2;
  string content = 3;
  uint32 user_id = 4;
}

message Status {
  uint32 id = 1;
  string title = 2;
  string content = 3;
  uint32 user_id = 4;
  string time = 5;
}